--- a/_config.yml
+++ b/_config.yml
@@ -97,9 +97,9 @@ defaults:
       layout: single
       author_profile: false
 
-category_archive:
-  type: liquid
-  path: /categories/
-tag_archive:
-  type: liquid
-  path: /tags/
+#category_archive:
+#  type: liquid
+#  path: /categories/
+#tag_archive:
+#  type: liquid
+#  path: /tags/
